# DHT22

./: CMakeLists.txt  README.md  prj.conf
boards/: dht22.overlay
src/: main.c
